Add preferred tools and remove final remnants of bitwise mask
